--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app-21",
   "version": "0.1.0",
-  "homepage": "https://elhadji003.github.io/deploy-teste",
+  "homepage": "https://elhadji003.github.io/deploy-teste/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
