--- a/package.json
+++ b/package.json
@@ -7,10 +7,23 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.2",
+    "cdbreact": "^1.5.18",
+    "dayjs": "^1.11.10",
+    "firebase": "^10.7.2",
+    "json-server": "^1.0.0-alpha.23",
+    "primereact": "^10.3.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-icon": "^1.0.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "sass": "^1.70.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
